applied feedback via patch from customer